--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -345,7 +345,7 @@
           <property name="orientation">
            <enum>Qt::Horizontal</enum>
           </property>
-          <widget class="QTableView" name="tasksView">
+          <widget class="XTableView" name="tasksView">
            <property name="frameShape">
             <enum>QFrame::NoFrame</enum>
            </property>
@@ -396,7 +396,7 @@
          <number>0</number>
         </property>
         <item>
-         <widget class="QTableView" name="resourcesView">
+         <widget class="XTableView" name="resourcesView">
           <property name="frameShape">
            <enum>QFrame::NoFrame</enum>
           </property>
@@ -428,7 +428,7 @@
          <number>0</number>
         </property>
         <item>
-         <widget class="QTableView" name="calendarsView">
+         <widget class="XTableView" name="calendarsView">
           <property name="frameShape">
            <enum>QFrame::NoFrame</enum>
           </property>
@@ -460,7 +460,7 @@
          <number>0</number>
         </property>
         <item>
-         <widget class="QTableView" name="daysView">
+         <widget class="XTableView" name="daysView">
           <property name="frameShape">
            <enum>QFrame::NoFrame</enum>
           </property>
@@ -866,6 +866,11 @@
    <extends>QScrollArea</extends>
    <header>ganttview.h</header>
    <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>XTableView</class>
+   <extends>QTableView</extends>
+   <header>xtableview.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
